# One_Authors_Blog

./: .gitignore  pyproject.toml
articles/: admin.py  forms.py  models.py  urls.py  views.py
articles/templates/article/: create_article.html  detail_article.html  list_article.html
blog/: .env_example  settings.py  urls.py
static/css/: main.css
static/js/: main.js
templates/: base.html  navbar.html
