[tool.poetry]
name = "one_authors_blog"
version = "0.1.0"
description = ""
authors = ["Vladimir-Vologda <vologda2018@inbox.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
Pillow = "^9.1.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
